--- a/.github/workflows/pages-preview.yml
+++ b/.github/workflows/pages-preview.yml
@@ -4,7 +4,13 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
   push:
-    branches: [main]
+    branches:
+      - main
+      - 'chore/**'
+      - 'feat/**'
+      - 'fix/**'
+      - 'refactor/**'
+  workflow_dispatch: {}
 
 # Required for GitHub Pages deployment and PR previews
 permissions:
