--- a/plugins/manifest.json
+++ b/plugins/manifest.json
@@ -73,6 +73,30 @@
       "description": "Canvas UI (center slot) - scaffold",
       "autoMount": true,
       "ui": { "slot": "center", "export": "CanvasPage" }
+    },
+    {
+      "name": "Header Left Branding",
+      "path": "header/left/",
+      "version": "0.1.0",
+      "description": "Header left slot branding/status UI",
+      "autoMount": true,
+      "ui": { "slot": "header-left", "export": "HeaderLeft" }
+    },
+    {
+      "name": "Header Center Toggles",
+      "path": "header/center/",
+      "version": "0.1.0",
+      "description": "Header center slot panel toggles UI",
+      "autoMount": true,
+      "ui": { "slot": "header-center", "export": "HeaderCenter" }
+    },
+    {
+      "name": "Header Right Controls",
+      "path": "header/right/",
+      "version": "0.1.0",
+      "description": "Header right slot action buttons UI",
+      "autoMount": true,
+      "ui": { "slot": "header-right", "export": "HeaderRight" }
     }
   ]
 }
