## Header UI Fixes implemented (Green)
- Manifest: Set header UI entries to autoMount=false
  - plugins/manifest.json updated for header/left, header/center, header/right

- Manifest generator: Detect nested header entries and set autoMount=false
  - scripts/generate-manifest.mjs now:
    - Recursively discovers plugin entries by presence of index.js (so header/left, header/center, header/right are properly included)
    - Sets autoMount=false for those header UI entries

- LibraryPanel: Remove one-time global guard and always re-play on mount
  - plugins/component-library-plugin/index.js: removed window.__rx_library_played__ gate; effect now replays each mount, which resolves the “stuck Loading…” after remount.

## Verification

- Targeted tests:
  - Header UI auto-mount test: PASS
  - LibraryPanel remount test: PASS
  - HeaderCenter callback-only test: PASS
- Full suite: Previously 92 passed; quick affected subset is green. We can run the full suite again on CI too.

--- a/plugins/manifest.json
+++ b/plugins/manifest.json
@@ -79,7 +79,7 @@
       "path": "header/left/",
       "version": "0.1.0",
       "description": "Header left slot branding/status UI",
-      "autoMount": true,
+      "autoMount": false,
       "ui": { "slot": "header-left", "export": "HeaderLeft" }
     },
     {
@@ -87,7 +87,7 @@
       "path": "header/center/",
       "version": "0.1.0",
       "description": "Header center slot panel toggles UI",
-      "autoMount": true,
+      "autoMount": false,
       "ui": { "slot": "header-center", "export": "HeaderCenter" }
     },
     {
@@ -95,7 +95,7 @@
       "path": "header/right/",
       "version": "0.1.0",
       "description": "Header right slot action buttons UI",
-      "autoMount": true,
+      "autoMount": false,
       "ui": { "slot": "header-right", "export": "HeaderRight" }
     }
   ]
