--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "renderx-plugins",
-  "version": "1.1.0",
-  "private": true,
+  "version": "1.1.4",
+  "private": false,
   "description": "RenderX plugins meta-package with unit tests and build + manifest generation",
+  "files": [
+    "plugins/",
+    "json-components/"
+  ],
   "license": "MIT",
   "type": "commonjs",
   "scripts": {
@@ -10,11 +14,12 @@
     "test:ci": "jest --ci",
     "build:plugins": "node ./scripts/build-plugins.mjs",
     "build:manifest": "node ./scripts/generate-manifest.mjs",
-    "build": "npm run build:plugins && npm run build:manifest"
+    "build": "npm run build:plugins && npm run build:manifest && node ./scripts/build-bundles.mjs"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^24.2.1",
+    "esbuild": "^0.25.9",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-extended": "^3.2.4",
