--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "MIT",
   "type": "commonjs",
   "scripts": {
+    "dev": "node ./scripts/dev-server.cjs",
     "test": "jest --passWithNoTests",
     "test:ci": "jest --ci",
+    "e2e": "playwright test",
     "build:plugins": "node ./scripts/build-plugins.mjs",
     "build:manifest": "node ./scripts/generate-manifest.mjs",
     "build": "npm run build:plugins && npm run build:manifest && node ./scripts/build-bundles.mjs"
