--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-extended": "^3.2.4",
     "jsdom": "^26.1.0",
+    "@playwright/test": "^1.40.0",
     "playwright": "^1.40.0",
     "ts-jest": "^29.4.1",
     "typescript": "^5.9.2"
