docs(#21): add docs/logs/console.sample.md and allow committing docs logs

--- a/.gitignore
+++ b/.gitignore
@@ -139,4 +139,9 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 /.vs
 /.logs
+
+# Allow committed docs logs
+!docs/logs/
+!docs/logs/*.md
+
 /.*
