fox: New script: scripts/update-plugins-manifest.mjs   - Reads version from package.json   - Updates plugins/manifest.json version fields:     - Top-level "version"     - Each plugin's "version" - Build script updated to run sync step - Unit test added to validate version sync
This ensures any package version bump is reflected in plugins/manifest.json during builds.

## What changed

- package.json scripts:
  - Added build:sync-plugins-manifest
  - Included it in build sequence after manifest generation:
    - build runs: build:plugins → build:manifest → build:sync-plugins-manifest → bundle

- New script: scripts/update-plugins-manifest.mjs
  - Updates versions based on package.json

- New test: tests/unit/build/manifest-version-sync.test.ts
  - Executes the script with Node
  - Asserts plugins/manifest.json version equals package.json version at root and per-plugin

## Relevant file excerpts

- package.json (scripts)
````json path=package.json mode=EXCERPT
"build:manifest": "node ./scripts/generate-manifest.mjs",
"build:sync-plugins-manifest": "node ./scripts/update-plugins-manifest.mjs",
"build": "npm run build:plugins && npm run build:manifest && npm run build:sync-plugins-manifest && node ./scripts/build-bundles.mjs"
````

- scripts/update-plugins-manifest.mjs
````js path=scripts/update-plugins-manifest.mjs mode=EXCERPT
export async function syncPluginsManifestVersion() {
  const pkg = JSON.parse(await fs.readFile(pkgPath, "utf8"));
  const version = pkg.version || "0.1.0";
  let manifest = JSON.parse(await fs.readFile(pluginsManifestPath, "utf8"));
  manifest.version = version;
  if (Array.isArray(manifest.plugins)) {
    manifest.plugins = manifest.plugins.map(p => ({ ...p, version }));
  }
  await fs.writeFile(pluginsManifestPath, JSON.stringify(manifest, null, 2), "utf8");
}
````

- tests/unit/build/manifest-version-sync.test.ts
````ts path=tests/unit/build/manifest-version-sync.test.ts mode=EXCERPT
const syncScriptPath = path.join(repoRoot, "scripts", "upda

--- a/plugins/manifest.json
+++ b/plugins/manifest.json
@@ -1,102 +1,120 @@
 {
-  "version": "1.0.0",
+  "version": "1.1.5",
   "plugins": [
     {
       "name": "Theme Management Plugin",
       "path": "theme-management-plugin/",
-      "version": "1.0.0",
+      "version": "1.1.5",
       "description": "Theme switching and management plugin for SPA integration",
       "autoMount": true
     },
     {
       "name": "Component Library Plugin",
       "path": "component-library-plugin/",
-      "version": "1.0.0",
+      "version": "1.1.5",
       "description": "Component library loading and preparation plugin",
       "autoMount": true,
-      "ui": { "slot": "left", "export": "LibraryPanel" }
+      "ui": {
+        "slot": "left",
+        "export": "LibraryPanel"
+      }
     },
     {
       "name": "Library.component-drag-symphony",
       "path": "library-drag-plugin/",
-      "version": "1.0.0",
+      "version": "1.1.5",
       "description": "Handles drag start/end from the Element Library",
       "autoMount": true
     },
     {
       "name": "Library.component-drop-symphony",
       "path": "library-drop-plugin/",
-      "version": "1.0.0",
+      "version": "1.1.5",
       "description": "Handles library element drop onto the canvas and forwards create",
       "autoMount": true
     },
     {
       "name": "Canvas.component-create-symphony",
       "path": "canvas-create-plugin/",
-      "version": "1.0.0",
+      "version": "1.1.5",
       "description": "Creates a new canvas component on drop",
       "autoMount": true
     },
     {
       "name": "Canvas.component-select-symphony",
       "path": "canvas-selection-plugin/",
-      "version": "1.0.0",
+      "version": "1.1.5",
       "description": "Select/deselect a canvas component with callback updates",
       "autoMount": true
     },
     {
       "name": "Canvas.component-drag-symphony",
       "path": "canvas-drag-plugin/",
-      "version": "1.0.0",
+      "version": "1.1.5",
       "description": "Drag/move a canvas component with callback updates",
       "autoMount": true
     },
     {
       "name": "Canvas.component-resize-symphony",
       "path": "canvas-resize-plugin/",
-      "version": "1.0.0",
+      "version": "1.1.5",
       "description": "Resize a canvas component with callback updates",
       "autoMount": true
     },
     {
       "name": "Control Panel UI Plugin",
       "path": "control-panel-plugin/",
-      "version": "1.0.0",
+      "version": "1.1.5",
       "description": "Properties panel UI for the right slot",
       "autoMount": true,
-      "ui": { "slot": "right", "export": "ControlPanelPanel" }
+      "ui": {
+        "slot": "right",
+        "export": "ControlPanelPanel"
+      }
     },
     {
       "name": "Canvas UI Plugin",
       "path": "canvas-ui-plugin/",
-      "version": "0.1.0",
+      "version": "1.1.5",
       "description": "Canvas UI (center slot) - scaffold",
       "autoMount": true,
-      "ui": { "slot": "center", "export": "CanvasPage" }
+      "ui": {
+        "slot": "center",
+        "export": "CanvasPage"
+      }
     },
     {
       "name": "Header Left Branding",
       "path": "header/left/",
-      "version": "0.1.0",
+      "version": "1.1.5",
       "description": "Header left slot branding/status UI",
       "autoMount": false,
-      "ui": { "slot": "header-left", "export": "HeaderLeft" }
+      "ui": {
+        "slot": "header-left",
+        "export": "HeaderLeft"
+      }
     },
     {
       "name": "Header Center Toggles",
       "path": "header/center/",
-      "version": "0.1.0",
+      "version": "1.1.5",
       "description": "Header center slot panel toggles UI",
       "autoMount": false,
-      "ui": { "slot": "header-center", "export": "HeaderCenter" }
+      "ui": {
+        "slot": "header-center",
+        "export": "HeaderCenter"
+      }
     },
     {
       "name": "Header Right Controls",
       "path": "header/right/",
-      "version": "0.1.0",
+      "version": "1.1.5",
       "description": "Header right slot action buttons UI",
       "autoMount": false,
-      "ui": { "slot": "header-right", "export": "HeaderRight" }
+      "ui": {
+        "slot": "header-right",
+        "export": "HeaderRight"
+      }
     }
   ]
 }
