--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "renderx-plugins",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "private": false,
   "description": "RenderX plugins meta-package with unit tests and build + manifest generation",
   "files": [
@@ -16,7 +16,8 @@
     "e2e": "playwright test",
     "build:plugins": "node ./scripts/build-plugins.mjs",
     "build:manifest": "node ./scripts/generate-manifest.mjs",
-    "build": "npm run build:plugins && npm run build:manifest && node ./scripts/build-bundles.mjs"
+    "build:sync-plugins-manifest": "node ./scripts/update-plugins-manifest.mjs",
+    "build": "npm run build:plugins && npm run build:manifest && npm run build:sync-plugins-manifest && node ./scripts/build-bundles.mjs"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
