--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "renderx-plugins",
-  "version": "1.1.8",
+  "version": "1.2.1",
   "private": false,
   "description": "RenderX plugins meta-package with unit tests and build + manifest generation",
   "files": [
@@ -14,6 +14,7 @@
     "test": "jest --passWithNoTests",
     "test:ci": "jest --ci",
     "e2e": "playwright test",
+    "prebuild": "node ./scripts/prebuild-version.mjs",
     "build:plugins": "node ./scripts/build-plugins.mjs",
     "build:manifest": "node ./scripts/generate-manifest.mjs",
     "build:sync-plugins-manifest": "node ./scripts/update-plugins-manifest.mjs",
